--- a/vpn-tunnel/action.yml
+++ b/vpn-tunnel/action.yml
@@ -58,8 +58,12 @@ runs:
           # Make the HTTP request and get the status code
           echo "Attempt $((attempts+1)): Calling URL: ${{ inputs.canary-url }}"
 
-          response_code=$(curl -s -w "%{http_code}" "${{ inputs.url }}") || true
-          curl_exit_code=$?
+          set +e
+          # Make the HTTP request and get the status code
+          response_code=$(curl -s -w "%{http_code}" "${{ inputs.url }}")
+          curl_exit_code=$?          
+          # Re-enable exit on error
+          set -e
 
           if [ $curl_exit_code -ne 0 ]; then
             echo "⚠️ curl failed with exit code $curl_exit_code"
