--- a/vpn-tunnel/action.yml
+++ b/vpn-tunnel/action.yml
@@ -61,7 +61,8 @@ runs:
           set +e
           # Make the HTTP request and get the status code
           response_code=$(curl -s -o /dev/null -w "%{http_code}" "${{ inputs.url }}")
-          curl_exit_code=$?          
+          curl_exit_code=$?
+          echo $response_code    
           # Re-enable exit on error
           set -e
 
