--- a/vpn-tunnel/action.yml
+++ b/vpn-tunnel/action.yml
@@ -27,12 +27,12 @@ runs:
         sudo apt install resolvconf
         sudo apt install wireguard
 
-    - name: Create configuration file
-      shell: bash
-      run: |
-          echo "${{ inputs.config-base64 }}" |base64 -d > wg0.conf
-          sudo chmod 600 wg0.conf
-          sudo wg-quick up ./wg0.conf
+    # - name: Create configuration file
+    #   shell: bash
+    #   run: |
+    #       echo "${{ inputs.config-base64 }}" |base64 -d > wg0.conf
+    #       sudo chmod 600 wg0.conf
+    #       sudo wg-quick up ./wg0.conf
 
     - name: Validate connection using the provided canary URL
       shell: bash
