--- a/maven-cache-warmup/action.yml
+++ b/maven-cache-warmup/action.yml
@@ -31,8 +31,8 @@ runs:
     - name: Setup java
       uses: actions/setup-java@v4
       with:
-        distribution: ${{ input.java-distribution }}
-        java-version: ${{ input.java-version }}
+        distribution: ${{ inputs.java-distribution }}
+        java-version: ${{ inputs.java-version }}
 
     - name: Set Maven repository path
       shell: bash
