--- a/.github/workflows/reusable-delivery-pr-chores.yml
+++ b/.github/workflows/reusable-delivery-pr-chores.yml
@@ -18,6 +18,7 @@ jobs:
     # It does not make sense to run that workflow when a PR is closed
     if: ${{ github.event.action != 'closed' }}
     steps:
+      - uses: actions/checkout@v4
       - uses: amannn/action-semantic-pull-request@v5
         id: lint_pr_title
         env:
