--- a/dependencies-check-java/action.yml
+++ b/dependencies-check-java/action.yml
@@ -88,6 +88,7 @@ runs:
         echo "DIFF_STATUS=${status}" >> $GITHUB_ENV
         if [ $status -eq 1 ]; then
           diff ${BASE_REPO_DIR}/${{ inputs.root_folder }}/base-deps.txt ${{ inputs.root_folder }}/deps.txt >> pom.diff || true
+          cat pom.diff
           sed -i -r 's/^[0-9]+a[0-9]+$/Added/' pom.diff
           sed -i -r 's/^[0-9,]+c[0-9,]+$/Updated/' pom.diff
           sed -i -r 's/^[0-9]+d[0-9]+$/Removed/' pom.diff
