--- a/.github/workflows/reusable-delivery-issue-chores.yml
+++ b/.github/workflows/reusable-delivery-issue-chores.yml
@@ -55,6 +55,13 @@ jobs:
           project-url: https://github.com/orgs/Jahia/projects/50
           github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
 
+      - name: Attach all Idea tickets to the PM board
+        uses: actions/add-to-project@v1.0.2
+        if: ${{ steps.get-issue.outputs.issue_type == 'Idea' }}}
+        with:
+          project-url: https://github.com/orgs/Jahia/projects/59
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
+
       - name: Attach customers tickets to the Product Team project
         uses: actions/add-to-project@v1.0.2
         with:
