--- a/.github/workflows/reusable-delivery-issue-chores.yml
+++ b/.github/workflows/reusable-delivery-issue-chores.yml
@@ -34,18 +34,32 @@ jobs:
 
       # Using an official action from GitHub to attach issues to projects
       # https://github.com/marketplace/actions/add-to-github-projects
-      - name: Attach needs-triage to the Bugs Triage project
+      - name: Attach needs-triage label to the Bugs Triage project
         uses: actions/add-to-project@v1.0.2
         with:
           project-url: https://github.com/orgs/Jahia/projects/13
           github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
           labeled: need-triage
 
+      - name: Attach design label to the design project
+        uses: actions/add-to-project@v1.0.2
+        with:
+          project-url: https://github.com/orgs/Jahia/projects/45
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
+          labeled: design
+
       - name: Attach all Sup tickets to the product team project
         uses: actions/add-to-project@v1.0.2
         if: ${{ steps.get-issue.outputs.issue_type == 'Sup' }}}
         with:
           project-url: https://github.com/orgs/Jahia/projects/50
+          github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
+
+      - name: Attach all Idea tickets to the PM board
+        uses: actions/add-to-project@v1.0.2
+        if: ${{ steps.get-issue.outputs.issue_type == 'Idea' }}}
+        with:
+          project-url: https://github.com/orgs/Jahia/projects/59
           github-token: ${{ secrets.GH_ISSUES_PRS_CHORES }}
 
       - name: Attach customers tickets to the Product Team project
