--- a/.github/workflows/reusable-on-code-change.yml
+++ b/.github/workflows/reusable-on-code-change.yml
@@ -158,7 +158,7 @@ jobs:
             - uses: actions/checkout@v4
               with:
                 ref: ${{ inputs.module_branch }}
-            - uses: jahia/jahia-modules-action/sonar-analysis@v2
+            - uses: jahia/jahia-modules-action/sonar-analysis@sonar_upgrade
               with:
                 primary_release_branch: ${{ inputs.sonar_analysis_primary_release_branch }}
                 github_pr_id: ${{github.event.number}}
