--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -28,6 +28,10 @@ inputs:
   docker_password:
     description: 'Docker login password'
     required: true
+  docker_registries:
+    description: 'JSON array of Docker registries with credentials'
+    default: '[]'
+    required: false
   docker_compose_file:
     description: 'Filename for docker-compose yaml file'
     required: false
@@ -43,7 +47,7 @@ inputs:
   timeout_minutes:
     description: 'The maximum number of minutes to run the tests before killing the process.'
     required: false
-    default: '60'    
+    default: '60'
   tests_manifest:
     description: 'Manifest contraining the provisioning script'
     required: true
@@ -110,7 +114,7 @@ inputs:
   should_skip_pagerduty:
     description: 'Should pagerduty notifications be skipped ?'
     required: false
-    default: 'false'    
+    default: 'false'
   slack_channel_id_notifications:
     description: 'Channel id to be used for failure notifications'
     required: false
@@ -143,7 +147,7 @@ inputs:
   build_artifacts_tests:
     description: 'Name of the artifacts to download from previous job (tests modules)'
     required: false
-    default: 'build-artifacts-tests'    
+    default: 'build-artifacts-tests'
   should_skip_zencrepes:
     description: 'Should zencrepes notifications be skipped ?'
     required: false
@@ -203,7 +207,7 @@ inputs:
   testrail_platformdata:
     description: 'Name of the file containing platform data to be sent to testrail as tests metadata'
     required: false
-    default: 'installed-jahia-modules.json'    
+    default: 'installed-jahia-modules.json'
   ci_startup_script:
     description: 'Startup script to use in-lieu of docker-compose up'
     required: false
