--- a/.github/workflows/reusable-integration-tests.yml
+++ b/.github/workflows/reusable-integration-tests.yml
@@ -127,8 +127,8 @@ jobs:
             [
               {
                 "registry": "ghcr.io",
-                "username": "${{ github.actor }}",
-                "password": "${{ secrets.GITHUB_TOKEN }}"
+                "username": "${{ secrets.GH_PACKAGES_USERNAME }}",
+                "password": "${{ secrets.GH_PACKAGES_TOKEN }}"
               },
               {
                 "username": "${{ secrets.DOCKERHUB_USERNAME }}",
