--- a/release/action.yml
+++ b/release/action.yml
@@ -23,7 +23,7 @@ inputs:
   tests_module_type:
     description: 'Type of module for the tests module (mvn,javascript)'
     required: false
-    default: 'mvn'    
+    default: 'mvn'
   github_slug:
     description: 'GitHub SLUG of the module (for example: jahia/sandbox)'
     required: true
@@ -227,6 +227,15 @@ runs:
         mvn -B -s ${{ inputs.mvn_settings_filepath }} -B -Dtag=${{ steps.versions.outputs.tag_version }} release:prepare -DreleaseVersion="${{ steps.versions.outputs.final_release_version }}" -DdevelopmentVersion="${{ steps.versions.outputs.next_development_version }}" -DscmCommentPrefix="[skip ci] [maven-release-plugin]"
       env:
         GPG_KEY_PASSPHRASE: ${{ inputs.gpg_key_passphrase }}
+
+    # The release:prepare step may result in an invalid signature if the release version differs from the version specified in the POM
+    # (for example, releasing version 1.2.3 when the POM contains 1.3.0-SNAPSHOT).
+    - name: Update signature
+      uses: jahia/jahia-modules-action/update-signature@v2
+      with:
+        nexus_username: ${{ secrets.NEXUS_USERNAME }}
+        nexus_password: ${{ secrets.NEXUS_PASSWORD }}
+        force_signature: true
 
     - name: Cache local Maven repository
       uses: actions/cache@v4
