--- a/release/action.yml
+++ b/release/action.yml
@@ -201,7 +201,7 @@ runs:
         echo "final_release_version=${FINAL_RELEASE_VERSION}" >> $GITHUB_OUTPUT
         echo "tag_version=${TAG_VERSION}" >> $GITHUB_OUTPUT
 
-    - name: Release prepare version for ${{ inputs.release_version }}
+    - name: Set version in pom file(s) for ${{ inputs.release_version }}
       shell: bash
       run: |
         echo "FINAL_RELEASE_VERSION=${{ steps.versions.outputs.final_release_version }}"
@@ -224,11 +224,11 @@ runs:
           echo "No test module found"
         fi
         cd ${GITHUB_WORKSPACE}
-        mvn -B -s ${{ inputs.mvn_settings_filepath }} -B -Dtag=${{ steps.versions.outputs.tag_version }} release:prepare -DreleaseVersion="${{ steps.versions.outputs.final_release_version }}" -DdevelopmentVersion="${{ steps.versions.outputs.next_development_version }}" -DscmCommentPrefix="[skip ci] [maven-release-plugin]"
+        mvn -B -s ${GITHUB_WORKSPACE}/${{ inputs.mvn_settings_filepath }} versions:set -DnewVersion="${{ steps.versions.outputs.final_release_version }}"
       env:
         GPG_KEY_PASSPHRASE: ${{ inputs.gpg_key_passphrase }}
 
-    # The release:prepare step may result in an invalid signature if the release version differs from the version specified in the POM
+    # The POM file(s) may have an invalid signature if the release version differs from the version specified in the POM
     # (for example, releasing version 1.2.3 when the POM contains 1.3.0-SNAPSHOT).
     - name: Update signature
       uses: jahia/jahia-modules-action/update-signature@v2
@@ -236,6 +236,14 @@ runs:
         nexus_username: ${{ inputs.nexus_username }}
         nexus_password: ${{ inputs.nexus_password }}
         force_signature: true
+
+    - name: Release prepare version for ${{ inputs.release_version }}
+      shell: bash
+      run: |
+        cd ${GITHUB_WORKSPACE}
+        mvn -B -s ${{ inputs.mvn_settings_filepath }} -B -Dtag=${{ steps.versions.outputs.tag_version }} release:prepare -DreleaseVersion="${{ steps.versions.outputs.final_release_version }}" -DdevelopmentVersion="${{ steps.versions.outputs.next_development_version }}" -DscmCommentPrefix="[skip ci] [maven-release-plugin]"
+      env:
+        GPG_KEY_PASSPHRASE: ${{ inputs.gpg_key_passphrase }}
 
     - name: Cache local Maven repository
       uses: actions/cache@v4
