--- a/.github/workflows/reusable-sonar-scan.yml
+++ b/.github/workflows/reusable-sonar-scan.yml
@@ -16,7 +16,7 @@ on:
       job_container:
         type: string
         required: false
-        default: "jahia/cimg-mvn-cache:ga_cimg_openjdk_8.0.312-node"
+        default: "ghcr.io/jahia/jahia-docker-mvn-cache:8-jdk-noble-mvn-loaded"
       git_branch:
         type: string
         required: false
@@ -53,8 +53,8 @@ jobs:
     container:
       image: ${{ inputs.job_container }}
       credentials:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+        username: ${{ secrets.GH_PACKAGES_USERNAME }}
+        password: ${{ secrets.GH_PACKAGES_TOKEN }}
     steps:
       - uses: actions/checkout@v4
         with:
