--- a/release/action.yml
+++ b/release/action.yml
@@ -240,7 +240,7 @@ runs:
         nexus_username: ${{ inputs.nexus_username }}
         nexus_password: ${{ inputs.nexus_password }}
         force_signature: true
-        sign_commits: true
+        sign_commits: ${{ inputs.sign_commits }}
         gpg_key: ${{ inputs.gpg_key }}
         gpg_key_id: ${{ inputs.gpg_key_id }}
         gpg_key_passphrase: ${{ inputs.gpg_key_passphrase }}
